# TrenchCoatStore

./: CMakeLists.txt  LICENSE  README.md
include/Domain/: FakeTrenchCoatValidator.h  IdGenerator.h  TrenchCoat.h  TrenchCoatValidator.h
include/GUI/: AdminGUI.h  GUIUtilities.h  MainMenuGUI.h  UserGUI.h
include/Repositories/: CSVShoppingBasket.h  FakeTrenchCoatRepository.h  FileException.h  FileShoppingBasket.h  HTMLShoppingBasket.h  ShoppingBasket.h  TrenchCoatRepository.h  TrenchCoatRepositoryException.h
include/Services/: AdminTrenchCoatServiceException.h  AdministratorTrenchCoatService.h  UserTrenchCoatService.h
include/Tests/: TestFunctions.h
include/UI/: UIClass.h
src/: main.cpp
src/Domain/: FakeTrenchCoatValidator.cpp  TrenchCoat.cpp  TrenchCoatValidator.cpp
src/GUI/: AdminGUI.cpp  GUIUtilities.cpp  MainMenuGUI.cpp  UserGUI.cpp  usergui.ui
src/Repositories/: CSVShoppingBasket.cpp  FakeTrenchCoatRepository.cpp  FileException.cpp  HTMLShoppingBasket.cpp  ShoppingBasket.cpp  TrenchCoatRepository.cpp
src/Services/: AdministratorTrenchCoatService.cpp  UserTrenchCoatService.cpp
src/Tests/: TestFunctions.cpp
src/UI/: UIClass.cpp
utils/: InitialTrenchCoats.txt  Utilities.cpp  Utilities.h
